[package]
name = "wasm-calculator"
version = "0.1.0"
edition = "2021"
description = "Wasm calculator module"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
lto = true 