[package]
name = "pdf-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
pdf-extract = "0.5"
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
tempfile = "3.8"
getrandom = { version = "0.2", features = ["js"] }
lopdf = "=0.31.0"
pdfium-render = "0.8"

[profile.release]
opt-level = 3
lto = true